<resources>
    <string name="app_name">hanmundan</string>

    <!-- join -->
    <string name="join_name_title">필명을 입력해 주세요.</string>
    <string name="join_name_subtitle">무엇이든 당신이 될 수 있습니다.</string>
    <string name="join_nickname_notice">공백을 제외한 6글자까지 가능합니다.</string>

    <!-- calender -->
    <string name="calender_navi_title">달력</string>
    <string name="calender_retirement_button">퇴고하기</string>

    <!-- navigation -->
    <string name="menu_main">오늘의 단어</string>
    <string name="menu_calender">달력</string>
    <string name="menu_bookmark">책갈피</string>
    <string name="menu_my_page">마이 페이지</string>
    <string name="menu_header_greeting">오늘도 반가워요!</string>
    <string name="menu_header_name">민주 님,</string>

    <!-- main -->
    <string name="main_navi_title">오늘의 단어</string>
    <string name="main_more_meaning">더 보기</string>
    <string name="main_advise_writing">완성되지 않아도 좋아요. 오늘의 한 글을 작성해 주세요.</string>
    <string name="main_save_writing">저장하기</string>
    <string name="main_word_meaning">1. 인류 사회의 변천과 흥망의 과정. 또는 그 기록.\n\n2. 어떠한 사물이나 사실이 존재해 온 연혁.</string>
    <string name="main_word_meaning_add">3. 자연 현상이 변하여 온 자취.\n\n4. 역으로 쓰는 건물.</string>
    <string name="main_word_title">역사</string>

    <!-- my page -->
    <string name="my_page_title">마이페이지</string>
    <string name="my_page_greeting">안녕하세요!</string>
    <string name="my_page_nickname">%s님</string>

    <!-- rewrite -->
    <string name="rewrite_title">퇴고하기</string>
    <string name="rewrite_more_meaning">더보기</string>
    <string name="rewrite_save_writing">저장하기</string>
    <string name="rewrite_word_meaning">1. 인류 사회의 변천과 흥망의 과정. 또는 그 기록.\n\n2. 어떠한 사물이나 사실이 존재해 온 연혁.</string>
    <string name="rewrite_word_title">역사</string>
    <string name="rewrite_written_sentence">역사는 흐르는 강물처럼</string>

    <!-- lock -->
    <string name="lock_title">자물쇠 열기</string>

    <!-- dialog -->
    <string name="dialog_change_view">작성한 글이 저장되지 않았습니다.\n이 화면을 나가시겠습니까?</string>
    <string name="dialog_delete_bookmark_sentence">삭제 시 책갈피가 빠지고\n작성한 글을 다시 볼 수 없습니다.\n정말 삭제하시겠습니까?</string>
    <string name="dialog_delete_sentence">삭제 시 작성한 글을 다시 볼 수 없습니다.\n정말 삭제하시겠습니까?</string>
    <string name="dialog_delete_yes">예</string>
    <string name="dialog_delete_no">아니오</string>

    <!-- bookmark -->
    <string name="bookmark_search">검색어를 입력하세요</string>
    <string name="bookmark_title">책갈피\n</string>
</resources>