<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/hmd_beige">

        <TextView
            android:id="@+id/tv_change_nickname_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/eulyoo1945_semibold"
            android:text="@string/join_name_title"
            android:textColor="@color/hmd_dark_green"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_change_nickname_name_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/eulyoo1945_regular"
            android:text="@string/join_name_subtitle"
            android:textColor="@color/hmd_green_80"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_change_nickname_name_input"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/hmd_green"
            android:fontFamily="@font/eulyoo1945_regular"
            android:hint="@string/join_nickname_notice"
            android:inputType="text"
            android:maxLength="6"
            android:textColor="@color/hmd_green_80"
            android:textColorHint="@color/hmd_green_80"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_change_nickname_name_subtitle" />

        <ImageButton
            android:id="@+id/iv_change_nickname_feather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_feather_green"
            app:layout_constraintBottom_toBottomOf="@id/et_change_nickname_name_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_change_nickname_name_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>